# Brightwork-Theme

./: README.md  _config.scss  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
common/: meson.build
common/gtk/: meson.build
common/gtk/_sass/: _apps.scss  _colors.scss  _common.scss  _palette.scss  _palette_variable.scss  _variables.scss
common/gtk/_sass/apps/: _budgie.scss  _nautilus.scss
common/gtk/_sass_fox/: fox-install.sh  meson.build  userChrome.scss
common/gtk/_sass_fox/_sass/fox/global/: global.scss  variables.scss
common/gtk/_sass_fox/_sass/fox/navbar/: navbar.scss
common/gtk/_sass_fox/_sass/fox/popup/: popup.scss
common/gtk/_sass_fox/_sass/fox/tabbar/: tabbar.scss
common/gtk/assets_sass/: assets.txt  colorsassets.css  makecolors.css  makecolors.scss  meson.build  render-asset.sh  render-assets.sh
common/gtk/gtk/: gtk.scss  index.theme  meson.build
common/gtk/gtk-dark/: gtk.scss  index.theme  meson.build
